themes/dm-theme-01/scss/templates-design/templates-design-parts/animation-toggler-collapse.scss
[data-toggle="collapse"] {
  cursor: pointer;
}

[data-toggle-animation="collapse"] {
  overflow: hidden;

  &[data-display="hide"] {
    animation: collapse-hide 0.1s ease-in-out forwards;
  }

  &[data-display="show"] {
    animation: collapse-show 0.1s ease-in-out forwards;
  }
}

@keyframes collapse-hide {
  0% {
    transform: translateY(0%);
    max-height: 100%;
    opacity: 1;
  }
  99.9% {
    transform: translateY(-99%);
    max-height: 0%;
    opacity: 0;
  }
  100% {
    transform: translateY(-100%);
    display: none !important;
    max-height: 0%;
    opacity: 0;
  }
}

@keyframes collapse-show {
  0% {
    transform: translateY(-100%);
    display: none !important;
    max-height: 0%;
    opacity: 0;
  }
  1% {
    transform: translateY(-99%);
    max-height: 0%;
    opacity: 0;
  }
  100% {
    transform: translateY(0%);
    max-height: 100%;
    opacity: 1;
  }
}

